Altera nome dos temas

--- a/src/brasil/gov/temas/themes/azul/manifest.cfg
+++ b/src/brasil/gov/temas/themes/azul/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Portal Modelo
+title = Portal Modelo - Tema Azul
 description = Tema para Portal Modelo do Governo Federal
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
