--- a/src/brasil/gov/temas/themes/verde/manifest.cfg
+++ b/src/brasil/gov/temas/themes/verde/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Portal Modelo - Tema Verde
+title = Portal Modelo
 description = Tema para Portal Modelo do Governo Federal
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
