--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
 script: bin/test
 after_success: test -v QA && make basic-validation coverage-validation || true
 notifications:
-  irc: irc.freenode.org#simplesconsultoria
+  irc: irc.freenode.org#plonegovbr
