Atualiza imagem de preview

--- a/src/brasil/gov/temas/themes/verde/manifest.cfg
+++ b/src/brasil/gov/temas/themes/verde/manifest.cfg
@@ -4,7 +4,7 @@ description = Tema para Portal Modelo do Governo Federal
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
 doctype = <!DOCTYPE html>
-preview = preview.jpg
+preview = preview.png
 
 [theme:parameters]
 ajax_load = python: 'ajax_load' in request.form
