Update development and CI configurations

--- a/travis.cfg
+++ b/travis.cfg
@@ -1,12 +1,16 @@
 [buildout]
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
-    https://raw.github.com/hvelarde/qa/master/tools.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
     versions.cfg
 
 package-name = brasil.gov.temas
 package-extras = [test]
-package-minimum-test-coverage = 75
+package-minimum-test-coverage = 100
+
+parts +=
+    createcoverage
+    coverage-sh
 
 allow-hosts +=
     code.google.com
