Customizações de estilo, imagem do tema amarelo

--- a/src/brasil/gov/temas/themes/amarelo/manifest.cfg
+++ b/src/brasil/gov/temas/themes/amarelo/manifest.cfg
@@ -1,10 +1,10 @@
 [theme]
-title = Portal Modelo - Tema Verde
+title = Portal Modelo - Tema Amarelo
 description = Tema para Portal Modelo do Governo Federal
-author = Simples Consultoria
+author = Simples Consultoria | DESERTO Digital
 author_email = products@simplesconsultoria.com.br
 doctype = <!DOCTYPE html>
-preview = preview.png
+preview = preview.jpg
 
 [theme:parameters]
 ajax_load = python: 'ajax_load' in request.form
