--- a/src/brasil/gov/temas/themes/azul/manifest.cfg
+++ b/src/brasil/gov/temas/themes/azul/manifest.cfg
@@ -1,10 +1,10 @@
 [theme]
-title = Portal Modelo - Tema Verde
+title = Portal Modelo - Tema Azul
 description = Tema para Portal Modelo do Governo Federal
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
 doctype = <!DOCTYPE html>
-preview = preview.png
+preview = preview.jpg
 
 [theme:parameters]
 ajax_load = python: 'ajax_load' in request.form
