Update CI configuration (closes #70)
- Remove timeout parameter
- Add suport for Coveralls and set minimum testing coverage
- Add some debug commands after failures
- Update dependencies versions

--- a/travis.cfg
+++ b/travis.cfg
@@ -5,15 +5,14 @@ extends =
 
 package-name = brasil.gov.temas
 package-extras = [test]
-package-minimum-test-coverage = 100
+package-min-coverage = 100
 
 parts +=
     createcoverage
     coverage-sh
 
-allow-hosts +=
-    code.google.com
-    robotframework.googlecode.com
-
 [versions]
-zope.configuration=3.8.0
+# XXX: needed by z3c.unconfigure in brasil.gov.portal
+zope.configuration = 3.8.0
+# XXX: needed by plone.app.event in brasil.gov.portal
+plone.app.portlets = 2.5a1
