--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,21 @@
 language: python
 python: 2.7
-env:
-  - PLONE_VERSION=4.3
+env: PLONE_VERSION=4.3
 install:
   - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
   - mkdir -p buildout-cache/downloads
   - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg -N -q -t 3
+  - bin/buildout -c travis.cfg -N -q
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 script: bin/test
-after_success: bin/coverage.sh
+after_success:
+  - bin/coverage.sh
+  - pip install -q coveralls
+  - coveralls
+after_failure:
+  - bin/buildout annotate -c travis.cfg
+  - firefox -v
 notifications:
   irc: irc.freenode.org#plonegovbr
