--- a/buildout.cfg
+++ b/buildout.cfg
@@ -25,4 +25,7 @@ recipe = collective.recipe.omelette
 eggs = ${test:eggs}
 
 [versions]
-zope.configuration=3.8.0
+# XXX: needed by z3c.unconfigure in brasil.gov.portal
+zope.configuration = 3.8.0
+# XXX: needed by plone.app.event in brasil.gov.portal
+plone.app.portlets = 2.5a1
