Resolução de conflitos para aceitação do testes do travis

--- a/travis.cfg
+++ b/travis.cfg
@@ -16,3 +16,4 @@ parts +=
 zope.configuration = 3.8.0
 # XXX: needed by plone.app.event in brasil.gov.portal
 plone.app.portlets = 2.5a1
+brasil.gov.temas =
