--- a/buildout.cfg
+++ b/buildout.cfg
@@ -29,3 +29,4 @@ eggs = ${test:eggs}
 zope.configuration = 3.8.0
 # XXX: needed by plone.app.event in brasil.gov.portal
 plone.app.portlets = 2.5a1
+brasil.gov.temas =
