Corrige o nome dos temas para Portal Padrão

--- a/src/brasil/gov/temas/themes/amarelo/manifest.cfg
+++ b/src/brasil/gov/temas/themes/amarelo/manifest.cfg
@@ -1,6 +1,6 @@
 [theme]
-title = Portal Modelo - Tema Amarelo
-description = Tema para Portal Modelo do Governo Federal
+title = Portal Padrão - Tema Amarelo
+description = Tema para Portal Padrão do Governo Federal
 author = Simples Consultoria | DESERTO Digital
 author_email = products@simplesconsultoria.com.br
 doctype = <!DOCTYPE html>
