--- a/src/brasil/gov/temas/themes/azul/manifest.cfg
+++ b/src/brasil/gov/temas/themes/azul/manifest.cfg
@@ -1,6 +1,6 @@
 [theme]
-title = Portal Modelo - Tema Azul
-description = Tema para Portal Modelo do Governo Federal
+title = Portal Padrão - Tema Azul
+description = Tema para Portal Padrão do Governo Federal
 author = Simples Consultoria
 author_email = products@simplesconsultoria.com.br
 doctype = <!DOCTYPE html>
