Code analysis apenas no código do pacote

--- a/travis.cfg
+++ b/travis.cfg
@@ -11,6 +11,9 @@ parts +=
     createcoverage
     coverage-sh
 
+[code-analysis]
+directory = src
+
 [versions]
 # XXX: needed by z3c.unconfigure in brasil.gov.portal
 zope.configuration = 3.8.0
