--- a/travis.cfg
+++ b/travis.cfg
@@ -2,6 +2,7 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
+    versions.cfg
 
 package-name = brasil.gov.temas
 package-extras = [test]
@@ -13,10 +14,3 @@ parts +=
 
 [code-analysis]
 directory = src
-
-[versions]
-# XXX: needed by z3c.unconfigure in brasil.gov.portal
-zope.configuration = 3.8.0
-# XXX: needed by plone.app.event in brasil.gov.portal
-plone.app.portlets = 2.5a1
-brasil.gov.temas =
