Pina: python-oembed, collective.js.bootstrap.
Corrige build 743.

https://travis-ci.org/plonegovbr/brasil.gov.temas/builds/57837626

--- a/versions.cfg
+++ b/versions.cfg
@@ -5,3 +5,14 @@ plone.app.portlets = 2.5a1
 plone.dexterity = 2.2.3
 # XXX: needed by z3c.unconfigure in brasil.gov.portal
 zope.configuration = 3.8.0
+
+# XXX: Versão 3.3.1 de collective.js.bootstrap passa a pedir como dependência
+# plone.app.jquery>=1.8.3, dando conflito no release do Plone 4.3.x.
+collective.js.bootstrap = 2.3.1.1
+
+# XXX: A última versão de python-oembed é a 0.2.2, que contém um release
+# chamado python-oembed-0.2.2.macosx-10.10-x86_64: o buildout por alguma razão
+# entende que o sufixo -macosx significa uma última versão e baixa esse pacote
+# que ainda por cima está quebrado. Ver https://github.com/abarmat/python-oembed/issues/7
+# Além disso, essa pinagem é a utilizada em https://github.com/plonegovbr/portalpadrao.release/blob/master/1.0.5/versions.cfg
+python-oembed = 0.2.1
