Pinando versões de dependências para que o 'bin/instance fg' funcione.
- plone.app.portlets 2.5a1 causa um ImportError. Foi utilizado o 2.4.8
- Atualiza zope.configuration para 3.8.1.
- plone.app.theming 1.1.3 causa um ConfigurationExecutionError. Foi
utilizado o 1.1.1

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,3 +27,8 @@ eggs = i18ndude
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[versions]
+# Necessário colocar o pacote com versão vazia para que outras versões no
+# buildout-cache não sobrescrevam o próprio pacote.
+brasil.gov.temas =
