--- a/travis.cfg
+++ b/travis.cfg
@@ -14,3 +14,8 @@ parts +=
 
 [code-analysis]
 directory = src
+
+[versions]
+# Necessário colocar o pacote com versão vazia para que outras versões no
+# buildout-cache não sobrescrevam o próprio pacote.
+brasil.gov.temas =
