--- a/versions.cfg
+++ b/versions.cfg
@@ -1,10 +1,10 @@
 [versions]
 # XXX: needed by plone.app.event in brasil.gov.portal
-plone.app.portlets = 2.5a1
+plone.app.portlets = 2.4.8
 # XXX: needed by brasil.gov.agenda in brasil.gov.portal
 plone.dexterity = 2.2.3
 # XXX: needed by z3c.unconfigure in brasil.gov.portal
-zope.configuration = 3.8.0
+zope.configuration = 3.8.1
 
 # XXX: Versão 3.3.1 de collective.js.bootstrap passa a pedir como dependência
 # plone.app.jquery>=1.8.3, dando conflito no release do Plone 4.3.x.
@@ -20,3 +20,8 @@ python-oembed = 0.2.1
 # XXX: collective.nitf 1.0b5 pede o plone.app.querystring>=1.2.5.
 # Discussão em: https://github.com/plonegovbr/brasil.gov.tiles/issues/126
 plone.app.querystring = 1.2.5
+
+# XXX: plone.app.theming = 1.1.3 causa erro:
+# ConfigurationExecutionError: <class 'zope.component.interfaces.ComponentLookupError'>:
+# (<InterfaceClass zope.security.interfaces.IPermission>, 'plone.app.controlpanel.Themes')
+plone.app.theming = 1.1.1
