Pina plone.app.querystring para 1.2.5.
Corrige build 755 em https://travis-ci.org/plonegovbr/brasil.gov.temas/builds/62130354.

Ver discussão em https://github.com/plonegovbr/brasil.gov.tiles/issues/126

--- a/versions.cfg
+++ b/versions.cfg
@@ -16,3 +16,7 @@ collective.js.bootstrap = 2.3.1.1
 # que ainda por cima está quebrado. Ver https://github.com/abarmat/python-oembed/issues/7
 # Além disso, essa pinagem é a utilizada em https://github.com/plonegovbr/portalpadrao.release/blob/master/1.0.5/versions.cfg
 python-oembed = 0.2.1
+
+# XXX: collective.nitf 1.0b5 pede o plone.app.querystring>=1.2.5.
+# Discussão em: https://github.com/plonegovbr/brasil.gov.tiles/issues/126
+plone.app.querystring = 1.2.5
