Pinando plone.app.contenttypes

--- a/versions.cfg
+++ b/versions.cfg
@@ -20,3 +20,6 @@ python-oembed = 0.2.1
 # XXX: collective.nitf 1.0b5 pede o plone.app.querystring>=1.2.5.
 # Discussão em: https://github.com/plonegovbr/brasil.gov.tiles/issues/126
 plone.app.querystring = 1.2.5
+
+# Discussão em: https://github.com/plonegovbr/brasil.gov.temas/pull/116
+plone.app.contenttypes = 1.0
