--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,9 @@ python: 2.7
 env: PLONE_VERSION=4.3
 install:
   - sed -ie "s#travis-4.x.cfg#travis-$PLONE_VERSION.x.cfg#" travis.cfg
-  - mkdir -p buildout-cache/downloads
-  - python bootstrap.py -c travis.cfg
-  - bin/buildout -c travis.cfg annotate
-  - bin/buildout -c travis.cfg -N -q
+  - python bootstrap.py
+  - bin/buildout annotate
+  - bin/buildout -Nq
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
