--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,6 @@ extends =
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
     https://raw.githubusercontent.com/plonegovbr/portalpadrao.release/master/1.0.5/versions.cfg
     https://raw.githubusercontent.com/plonegovbr/portal.buildout/master/buildout.d/versions.cfg
-    versions.cfg
 
 package-name = brasil.gov.temas
 package-extras = [test]
@@ -15,6 +14,8 @@ eggs +=
 parts +=
     i18ndude
     omelette
+    createcoverage
+    coverage-sh
 
 [instance]
 zcml += iw.debug
