--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ install:
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
-script: bin/test
+script:
+- bin/code-analysis
+- bin/test
 after_success:
   - bin/coverage.sh
   - pip install -q coveralls
