--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,9 @@ before_script:
 script:
 - bin/code-analysis
 - bin/test
-after_script:
-# XXX:
-# Firefox reclama: GConf-WARNING **: Got Disconnected from DBus.
-# E continua falhndo, criando um job falho a cada 30-50 minutos.
-# Então simplesmente matamos o processo.
-- pkill -9 firefox
 after_success:
-- bin/createcoverage -t "--layer=!Acceptance"
-- pip install -q coveralls
+- bin/createcoverage --output-dir=htmlcov -t "--layer=!Acceptance"
+- pip install coveralls
 - coveralls
 notifications:
   irc: irc.freenode.org#plonegovbr
