Clean up development and CI configurations

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [distutils]
-index-servers = pypi
+index-servers =
+    pypi
 
 [check-manifest]
 ignore =
@@ -7,3 +8,10 @@ ignore =
     Makefile
     bootstrap.py
     *.cfg
+
+[isort]
+force_alphabetical_sort = True
+force_single_line = True
+line_length = 200
+lines_after_imports = 2
+not_skip = __init__.py
