--- a/.travis.yml
+++ b/.travis.yml
@@ -5,23 +5,25 @@ cache:
   directories:
   - eggs
   - parts/node
+addons:
+  # XXX: use an older Firefox ESR as we are stuck with selenium = 2.53.5
+  #      https://github.com/SeleniumHQ/selenium/issues/2739#issuecomment-249482533
+  firefox: 45.9.0esr
 env:
   matrix:
-    - MASTER=true
-    - PENDING_RELEASE=true
+  - MASTER=true
+  - LAST_RELEASE=true
 matrix:
   allow_failures:
-    - env: MASTER=true
+    - env: LAST_RELEASE=true
   fast_finish: true
 install:
-- test $MASTER && sed -ie '/https:\/\/raw\.githubusercontent\.com\/plonegovbr\/portal\.buildout\/master\/buildout\.d\/versions\.cfg/d' buildout.cfg || true
 - python bootstrap.py
 - bin/buildout annotate
 - bin/buildout
 before_script:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-- firefox -v
 script:
 - bin/code-analysis
 - bin/test
