Clean up development and CI configurations (#143)
* Clean up development and CI configurations

* Fix code analysis

* Simplify CI by using only one build

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,6 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    https://raw.githubusercontent.com/plone/plone.app.robotframework/master/versions.cfg
     https://raw.githubusercontent.com/plonegovbr/portal.buildout/master/buildout.d/versions.cfg
 
 package-name = brasil.gov.temas
@@ -11,12 +10,23 @@ eggs +=
     plone.reload
 
 parts +=
-    omelette
-    createcoverage
     coverage-sh
+    createcoverage
+    node
+    omelette
 
 [code-analysis]
-directory = src
+recipe = plone.recipe.codeanalysis[recommended]
+directory = ${buildout:directory}/src/brasil/gov/temas
+clean-lines = False
+csslint = True
+csslint-bin = bin/csslint
+flake8-ignore = E501,P001
+jshint = True
+jshint-bin = bin/jshint
+multiprocessing = True
+pre-commit-hook = True
+return-status-codes = True
 
 [omelette]
 recipe = collective.recipe.omelette
