Run Pylint on Python 3 porting mode

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python: 2.7
 sudo: false
 cache:
   directories:
+  - $HOME/.pylint.d
   - eggs
   - parts/node
 addons:
@@ -11,6 +12,9 @@ addons:
   firefox: 45.9.0esr
 matrix:
   fast_finish: true
+before_install:
+- pip install coveralls pylint
+- pip install mccabe==0.3.1  # XXX: remove after updating flake8
 install:
 - python bootstrap.py
 - bin/buildout annotate
@@ -21,9 +25,9 @@ before_script:
 script:
 - bin/code-analysis
 - bin/test
+- pylint --py3k --disable=no-absolute-import src/brasil/gov/temas
 after_success:
 - bin/createcoverage --output-dir=htmlcov -t "--layer=!Acceptance"
-- pip install coveralls
 - coveralls
 notifications:
   irc: irc.freenode.org#plonegovbr
