--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,8 @@ parts +=
     createcoverage
     node
     omelette
+    webpack
+    staticresources
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
@@ -31,6 +33,17 @@ return-status-codes = True
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[webpack]
+recipe = gp.recipe.node
+version = 6.6.0
+npms = npm yarn webpack@3
+scripts = npm yarn webpack
+
+[staticresources]
+recipe = sc.recipe.staticresources
+name = brasil.gov.temas
+short_name = brasilgovtemas
 
 [versions]
 # Necessário colocar o pacote com versão vazia para que outras versões no
