Run build-brasilgovtemas after run buildout to automatically generate CSS

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,6 +16,7 @@ parts +=
     omelette
     webpack
     staticresources
+    build
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
@@ -44,6 +45,12 @@ scripts = npm yarn webpack
 recipe = sc.recipe.staticresources
 name = brasil.gov.temas
 short_name = brasilgovtemas
+
+[build]
+recipe = collective.recipe.cmd
+on_install=true
+on_update=true
+cmds= ${buildout:bin-directory}/build-brasilgovtemas
 
 [versions]
 # Necessário colocar o pacote com versão vazia para que outras versões no
