--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,9 @@ parts +=
     createcoverage
     node
     omelette
+    webpack
+    staticresources
+    build
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
@@ -31,6 +34,23 @@ return-status-codes = True
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[webpack]
+recipe = gp.recipe.node
+version = 6.6.0
+npms = npm yarn webpack@3
+scripts = npm yarn webpack
+
+[staticresources]
+recipe = sc.recipe.staticresources
+name = brasil.gov.temas
+short_name = brasilgovtemas
+
+[build]
+recipe = collective.recipe.cmd
+on_install=true
+on_update=true
+cmds= ${buildout:bin-directory}/build-brasilgovtemas
 
 [versions]
 # Necessário colocar o pacote com versão vazia para que outras versões no
