--- a/webpack/package.json
+++ b/webpack/package.json
@@ -12,14 +12,16 @@
   "devDependencies": {
     "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
-    "extract-loader": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.1.0",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.14",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
     "svg-url-loader": "^2.0.1",
     "webpack-spritesmith": "^0.3.3"
   }
