--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,6 +14,7 @@ parts +=
     createcoverage
     node
     omelette
+    pylint
     webpack
     staticresources
     build
@@ -34,6 +35,10 @@ return-status-codes = True
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${test:eggs}
+
+[pylint]
+recipe = zc.recipe.egg
+eggs = pylint
 
 [webpack]
 recipe = gp.recipe.node
