--- a/webpack/package.json
+++ b/webpack/package.json
@@ -16,6 +16,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.1.0",
+    "jquery.cookie": "^1.4.1",
     "node-sass": "^4.5.3",
     "postcss": "^6.0.14",
     "postcss-cssnext": "^3.0.2",
