Rename DEV script to DEBUG script

--- a/webpack/package.json
+++ b/webpack/package.json
@@ -4,7 +4,7 @@
   "main": "app/brasilgovtemas.js",
   "scripts": {
     "build": "webpack -p",
-    "dev": "webpack --watch",
+    "debug": "webpack --watch",
     "watch": "webpack -p --watch"
   },
   "repository": {},
