--- a/webpack/package.json
+++ b/webpack/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "main": "app/brasilgovtemas.js",
   "scripts": {
-    "build": "webpack -p",
-    "debug": "webpack --watch",
-    "watch": "webpack -p --watch"
+    "build": "./node_modules/.bin/webpack -p",
+    "debug": "./node_modules/.bin/webpack --watch",
+    "watch": "./node_modules/.bin/webpack -p --watch"
   },
   "repository": {},
   "license": "GPL-2.0",
@@ -13,6 +13,7 @@
     "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
+    "favicons-webpack-plugin": "^0.0.7",
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "image-webpack-loader": "^3.1.0",
@@ -23,6 +24,7 @@
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "svg-url-loader": "^2.0.1",
+    "webpack": "3",
     "webpack-clean-obsolete-chunks": "^0.3.0",
     "webpack-spritesmith": "^0.3.3"
   }
