Review codeanalysis configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -22,15 +22,13 @@ parts +=
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
 directory = ${buildout:directory}/src/brasil/gov/temas
-clean-lines = False
-csslint = True
-csslint-bin = bin/csslint
-flake8-ignore = E501
-jshint = True
-jshint-bin = bin/jshint
+clean-lines = True
+clean-lines-exclude = ${:directory}/themes
 multiprocessing = True
 pre-commit-hook = True
 return-status-codes = True
+flake8 = True
+flake8-ignore = E501
 
 [omelette]
 recipe = collective.recipe.omelette
