Add support for Codacy

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,14 @@ script:
 - bin/test
 - bin/pylint --py3k --disable=no-absolute-import src/brasil/gov/temas
 after_success:
-- bin/createcoverage --output-dir=htmlcov -t "--layer=!Acceptance"
+- pip install coverage
+- coverage run bin/test --layer=\!Acceptance
+# Coveralls
 - pip install coveralls
 - coveralls
+# Codacy
+- coverage xml
+- pip install codacy-coverage
+- python-codacy-coverage -r coverage.xml
 notifications:
   irc: irc.freenode.org#plonegovbr
