Update buildout configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -14,7 +14,7 @@ parts +=
     node
     omelette
     pylint
-    webpack
+    node
     staticresources
     build
 
@@ -35,9 +35,9 @@ eggs = ${test:eggs}
 
 [pylint]
 recipe = zc.recipe.egg
-eggs = pylint
+eggs = pylint < 2.0
 
-[webpack]
+[node]
 recipe = gp.recipe.node
 version = 6.6.0
 npms = npm yarn webpack@3
