Move theme padrao to theme azul and copy to theme branco

--- a/webpack/app/branco/manifest.cfg
+++ b/webpack/app/branco/manifest.cfg
@@ -1,5 +1,5 @@
 [theme]
-title = Tema Azul IDG
+title = Tema Branco IDG
 description = Tema para o Portal Padrão IDG
 author = Forcontent
 preview = preview.png
