--- a/buildout.cfg
+++ b/buildout.cfg
@@ -16,7 +16,6 @@ parts +=
     pylint
     node
     staticresources
-    build
 
 [code-analysis]
 recipe = plone.recipe.codeanalysis[recommended]
@@ -48,13 +47,8 @@ recipe = sc.recipe.staticresources
 name = brasil.gov.temas
 short_name = brasilgovtemas
 
-[build]
-recipe = collective.recipe.cmd
-on_install=true
-on_update=true
-cmds= ${buildout:bin-directory}/build-brasilgovtemas
-
 [versions]
 # Necessário colocar o pacote com versão vazia para que outras versões no
 # buildout-cache não sobrescrevam o próprio pacote.
 brasil.gov.temas =
+sc.recipe.staticresources = 1.0a2
