--- a/webpack/package.json
+++ b/webpack/package.json
@@ -13,6 +13,7 @@
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.22.0",
+    "clipboard": "^2.0.1",
     "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
     "extract-text-webpack-plugin": "^3.0.2",
