--- a/buildout.cfg
+++ b/buildout.cfg
@@ -38,9 +38,9 @@ eggs = pylint < 2.0
 
 [node]
 recipe = gp.recipe.node
-version = 6.6.0
-npms = npm yarn webpack@3
-scripts = npm yarn webpack
+version = 8.11.2
+npms = npm yarn
+scripts = npm yarn
 
 [staticresources]
 recipe = sc.recipe.staticresources
