--- a/webpack/package.json
+++ b/webpack/package.json
@@ -5,30 +5,29 @@
   "scripts": {
     "build": "./node_modules/.bin/webpack -p",
     "debug": "./node_modules/.bin/webpack --watch",
-    "watch": "./node_modules/.bin/webpack -p --watch"
+    "watch": "./node_modules/.bin/webpack -p --watch",
+    "test": "NODE_ENV=testing ./node_modules/.bin/karma start --single-run"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "browsers": [
+              "last 3 versions"
+            ]
+          }
+        }
+      ]
+    ]
   },
   "repository": {},
   "license": "GPL-2.0",
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.22.0",
-    "copy-webpack-plugin": "^4.2.1",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.5",
-    "html-webpack-plugin": "^2.30.1",
-    "image-webpack-loader": "^3.1.0",
+  "dependencies": {
+    "copy-webpack-plugin": "^4.5.1",
+    "sc.recipe.staticresources": "simplesconsultoria/sc.recipe.staticresources#1.0b1",
     "jquery.cookie": "^1.4.1",
-    "node-sass": "^4.5.3",
-    "postcss": "^6.0.14",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-loader": "^2.0.8",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "svg-url-loader": "^2.0.1",
-    "webpack": "^3",
-    "webpack-clean-obsolete-chunks": "^0.3.0",
-    "webpack-spritesmith": "^0.3.3"
+    "webpack-clean-obsolete-chunks": "^0.3.0"
   }
 }
