--- a/webpack/package.json
+++ b/webpack/package.json
@@ -1,10 +1,10 @@
 {
   "name": "brasilgovtemas",
-  "version": "0.0.1",
+  "version": "2.0.2",
   "main": "app/brasilgovtemas.js",
   "scripts": {
     "build": "./node_modules/.bin/webpack -p",
-    "debug": "./node_modules/.bin/webpack --watch",
+    "debug": "NODE_ENV=debug ./node_modules/.bin/webpack --watch",
     "watch": "./node_modules/.bin/webpack -p --watch",
     "test": "NODE_ENV=testing ./node_modules/.bin/karma start --single-run"
   },
@@ -25,9 +25,7 @@
   "repository": {},
   "license": "GPL-2.0",
   "dependencies": {
-    "copy-webpack-plugin": "^4.5.1",
-    "sc.recipe.staticresources": "simplesconsultoria/sc.recipe.staticresources#1.0b1",
-    "jquery.cookie": "^1.4.1",
-    "webpack-clean-obsolete-chunks": "^0.3.0"
+    "sc-recipe-staticresources": "simplesconsultoria/sc.recipe.staticresources#1.1b5",
+    "jquery.cookie": "^1.4.1"
   }
 }
