Pina versões para que o buildout execute corretamente

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,7 +2,7 @@
 extends =
     https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
     https://raw.github.com/collective/buildout.plonetest/master/qa.cfg
-    https://raw.githubusercontent.com/plonegovbr/portal.buildout/master/buildout.d/versions.cfg
+    https://raw.githubusercontent.com/plonegovbr/portalpadrao.release/master/1.5.2/versions.cfg
 
 package-name = brasil.gov.temas
 package-extras = [test]
@@ -36,3 +36,11 @@ eggs = ${test:eggs}
 # Necessário colocar o pacote com versão vazia para que outras versões no
 # buildout-cache não sobrescrevam o próprio pacote.
 brasil.gov.temas =
+
+setuptools=42.0.2
+zc.buildout=2.13.7
+plone.recipe.zope2instance = 4.4.0
+PyJWT = 1.6.4
+ftw.upgrade = 3.0.0
+path.py = 11.5.2
+flake8-isort = 4.0.0
